# aftershocks_data

./: .gitignore  README.md  pyproject.toml  requirements.txt  update_daily.py  update_monthly.py  update_weekly.py
charts_live/: debt_service_africa_trend.csv  home_bubble_data.csv  home_map_data.csv
country_page/: food_inflation_ts.csv  food_inflation_ts_regions.csv  inflation_ts_by_country.csv  insufficient_food_ts.csv  leading_causes_of_death.csv  leading_causes_of_death_column.csv  life_expectancy.csv  malaria_deaths.csv  people_on_art.csv  poverty_country_ts.csv
debt_topic/: africa_long_debt_stocks_ts.csv  debt_composition_country.csv  debt_distress_map.csv  debt_gdp_ratio_country_ts.csv  debt_service_china.csv  debt_service_comparison.csv  debt_service_ts.csv  debt_stocks_ts.csv  debt_to_china_country.csv  dservice_to_gov_exp.csv
drm_topic/: revenue_key_number.csv
explorers/: econ_metadata.xlsx  health_metadata.xlsx
health/: DTP_topic_chart.csv  causes_of_death.csv  health_expenditure_per_person.csv  hiv_topic_chart_v2.csv
hunger_topic/: ipc_phases.csv  prevalence_of_stunting.csv
oda_topic/: aid_to_food_ts.csv  aid_to_health_ts.csv  aid_to_humanitarian_ts.csv  aid_to_income_latest.csv  aid_to_income_ts.csv  aid_to_regions_ts.csv  aid_to_ukraine_comparison.csv  key_sector_shares.csv  oda_covid.csv  oda_gni_single_year_ts.csv  oda_gni_ts.csv  oda_idrc_share.csv  oda_ukraine_covid_refugees.csv  sector_totals.csv
raw_data/: BX.TRF.PWKR.CD.DT_all_.csv  DT.ODA.ODAT.CD_all_.csv  bi_plus_multi_health_spending_multiple_donors.csv  bi_plus_multi_health_spending_multiple_donorsb.csv  dac1.feather  data_updates.json  hdi.csv  wb_groupings.csv
scripts/: common.py  config.py  logger.py  (+6 more)
(+580 files in other folders)
