[tool.poetry]
name = "aftershocks_data"
version = "1"
description = "Data and tools for data.one.org"
authors = ["Jorge Rivera <jorge.rivera@one.org>","Luca Picci <luca.picci@one.org>" ]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bblocks = "^1.1"
pandas = "^1.5"
pyarrow = "^12.0"
python-dateutil = "^2.8.2"
pydeflate = "^1.3.8"
pyjstat = "^2.4.0"
requests = "^2.31.0"
numpy = "^1.25.0"
country-converter = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
