[tool.poetry]
name = "scripts"
version = "1"
description = "Data and tools for data.one.org"
authors = ["Jorge Rivera <jorge.rivera@one.org>","Luca Picci <luca.picci@one.org>" ]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bblocks = "^1"
pandas = "^2"
pyarrow = "^14.0"
pydeflate = "^1"
pyjstat = "^2"
requests = "^2"
numpy = "^1"
country-converter = "^1"
oda-data = "^1.0.11"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
