[project]
name = "aftershocks-data"
version = "1.0.0"
description = "Data and tools for data.one.org"
authors = ["Jorge Rivera <jorge.rivera@one.org>","Luca Picci <luca.picci@one.org>" ]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "bblocks==1.4.3",
    "country-converter>=1.3.2",
    "imf-reader>=1.4.1",
    "numpy>=2.3.5",
    "oda-data>=2.4.1",
    "pandas>=2.3.3",
    "pyarrow>=19.0.1",
    "pydeflate>=2.3.3",
    "pyjstat>=2.4.0",
    "requests>=2.32.5",
]
